Issue #29513: Fixed a reference leak in os.scandir() added in issue #29034.